chore: RestorePointsRepository and fixes